# hand386usb

./: .gitmodules  CMakeLists.txt
ch375/: CMakeLists.txt  ch375.hpp
ch375mse/: CMakeLists.txt  ch375mse.cpp
usbapi/: CMakeLists.txt  usbdesc.hpp
